--- a/sass/secundarios/_index.scss
+++ b/sass/secundarios/_index.scss
@@ -28,7 +28,7 @@
         width: 100%;
         z-index: 2;
         height: 10rem;
-        margin-bottom: 6rem;
+        margin-bottom:$medida-2;
         img{
             margin-top: 5rem;
             z-index: 2;
@@ -47,13 +47,9 @@
 }
 .mainindex__sec3 {
     h1 {
-        text-align: center;
+        @include h(3rem);
         padding: $medida-1;
-        text-align: center;
         margin: 3rem;
-        font-size: 3rem;
-        text-decoration: underline nth($colores, 5);
-        font-family: Tiemann, serif;
     }
 
     .mainindex__sec3__contenedorpro {
@@ -66,15 +62,14 @@
         @include margen(0rem $medida-1, $medida-1 0rem);
         width: auto;
         text-align: center;
-        border: 0.3rem solid nth($colores, 7);
-        border-radius: $medida-3;
+        @extend %borde;
         overflow: auto;
         transition: 1s;
         margin-top: $medida-2;
 
         p {
             font-weight: bold;
-            font-size: $medida-1 + $medida-3;
+            font-size: $medida-1 + $medida-05;
             padding-bottom: $medida-1;
             line-height: $medida-2;
             font-size: $medida-1 + 0.125rem;
@@ -94,9 +89,9 @@
         }
 
         span {
-            padding: $medida-3;
+            padding: $medida-05;
             line-height: $medida-2;
-            font-size: $medida-1 + $medida-3;
+            font-size: $medida-1 + $medida-05;
         }
     }
 
@@ -106,8 +101,8 @@
 }
 hr {
     margin: 0;
-    margin-top: 8rem;
-    margin-bottom: 8rem;
+    @include  tb(6rem,6rem);
+    width:100%;
 }
 .mainindex__sec4{
     @extend %none;
@@ -120,7 +115,7 @@ hr {
         @extend %boton;
     }
     h3{
-        @include h($medida-2 + $medida-3);
+        @include h($medida-2 + $medida-05);
         margin-top: $medida-2;
     }
     h2{
