media de contacto

--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -8,5 +8,5 @@
 @import"secundarios/sed";
 @import"secundarios/index";
 @import"secundarios/nos";
-@import"secundarios/mediaquerie.scss";
+@import"secundarios/proy";
 
