--- a/sass/secundarios/_contact.scss
+++ b/sass/secundarios/_contact.scss
@@ -1,5 +1,6 @@
 // variables y mixin
 @import"../utillities/variables";
+@import"../utillities/extend";
 @import"../utillities/mixin";
 @import"../utillities/listas";
 
@@ -9,7 +10,7 @@
     justify-content: center;
 
     .main__caja {
-        margin: 8rem;
+        margin: 5rem;
         @include sizes(40rem, auto);
         border: $medida-05 / 2 solid nth($colores, 7);
         border-radius: $medida-05;
@@ -21,6 +22,7 @@
 
         div {
             margin: $medida-2;
+
             label {
                 font-family: Tiemann, serif;
                 font-size: $medida-1 + $medida-05;
@@ -37,20 +39,33 @@
         .main__caja__bot {
             width: 100%;
             display: grid;
-            margin-left: 12%;
+            margin-left: 2%;
             row-gap: $medida-1;
-            grid-template-areas: 
-            "reset envia";
-        .reset {
-            grid-area: reset;
-            @extend %bot;
+            grid-template-areas:
+                "reset envia";
+
+            .reset {
+                grid-area: reset;
+                @extend %bot;
+            }
+
+            .submit {
+                grid-area: envia;
+                align-self: flex-end;
+                @extend %bot;
+            }
         }
-        .submit{
-            grid-area: envia;
-            align-self: flex-end;
-            @extend %bot;
+
+    }
+}
+/*estilos de las mediaqueries*/
+@media screen and (min-width:576px) {
+    .main {
+        .main__caja {
+            margin: 8rem;
+            .main__caja__bot {
+                margin-left: 12%;
+            }
         }
     }
-
-}
 }
