--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -1,3 +1,8 @@
+// utillities
+@import"utillities/variables";
+@import"utillities/mixin";
+@import"utillities/listas";
+@import"utillities/extend";
 // hojas parciales
 @import "secundarios/reset"; 
 @import"secundarios/cuerpos";
