--- a/sass/secundarios/_proy.scss
+++ b/sass/secundarios/_proy.scss
@@ -1,4 +1,37 @@
-@import"../utillities/variables";
-@import"../utillities/extend";
-@import"../utillities/mixin";
-@import"../utillities/listas";
+/*estilos de proyectos*/
+.mainproy {
+    h1 {
+        margin-top: $medida-2;
+        @include h($medida-3);
+    }
+
+    .mainproy__sec {
+        margin: $medida-3;
+        display: grid;
+        grid-template-areas:
+            "img"
+            "h2"
+            "p";
+
+        img {
+            grid-area: img;
+            padding: $medida-2;
+            @include sizes(21rem, 16rem);
+        }
+
+        h2 {
+            grid-area: h2;
+            text-align: center;
+        }
+
+        p {
+            grid-area: p;
+            padding: $medida-2;
+            @extend %p;
+        }
+
+        border: $medida-05 inset nth($colores, 7);
+        border-radius: $medida-1 0rem $medida-1 0rem;
+    }
+
+}
