--- a/sass/utillities/_variables.scss
+++ b/sass/utillities/_variables.scss
@@ -1,6 +1,7 @@
 // medidas
-$medida-1:1rem;
-$medida-2:2rem;
-$medida-3:3rem;
-$medida-05:0.5rem;
-$medida-025:0.25rem;
+$medida-1: 1rem;
+$medida-2: 2rem;
+$medida-3: 3rem;
+$medida-4: 4rem;
+$medida-05: 0.5rem;
+$medida-025: 0.25rem;
