--- a/sass/secundarios/_proy.scss
+++ b/sass/secundarios/_proy.scss
@@ -22,16 +22,48 @@
         h2 {
             grid-area: h2;
             text-align: center;
+            @include h($medida-2);
+            padding: 0rem $medida-05;
         }
 
         p {
             grid-area: p;
             padding: $medida-2;
-            @extend %p;
+            @include p(center);
+            text-align: left;
         }
-
+        .mainproy__sec__span{
+            display: none;
+        }
         border: $medida-05 inset nth($colores, 7);
         border-radius: $medida-1 0rem $medida-1 0rem;
     }
 
+}
+/* estilos de la mediaquerie */
+@media screen and (min-width:576px) {
+    .mainproy {
+      h1{
+        font-size: $medida-3 + $medida-05;
+      }  
+        .mainproy__sec {
+            grid-template-areas:
+            "img h2"
+            "img p";
+            h2{
+                font-size: $medida-2 +$medida-05;
+                margin-top: $medida-1 + $medida-05;
+            }
+            p{
+                text-align: center;
+                margin-bottom: $medida-1;
+            }
+            .mainproy__sec__span{
+                display: inline;
+            }
+            img {
+                @include sizes(30rem, 20rem);
+            }
+        }
+    }
 }
