--- a/sass/secundarios/_proy.scss
+++ b/sass/secundarios/_proy.scss
@@ -1,36 +1,30 @@
 /*estilos de proyectos*/
 .mainproy {
     h1 {
-        margin-top: $medida-2;
         @include h($medida-3);
+        @include tb($medida-3,$medida-3);
     }
 
     .mainproy__sec {
-        margin: $medida-3;
-        display: grid;
-        grid-template-areas:
-            "img"
-            "h2"
-            "p";
-
+        margin: $medida-2;
+        margin-bottom: $medida-2;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         img {
-            grid-area: img;
             padding: $medida-2;
-            @include sizes(21rem, 16rem);
+            @include sizes(100%, 14rem);
         }
 
         h2 {
-            grid-area: h2;
             text-align: center;
             @include h($medida-2);
             padding: 0rem $medida-05;
         }
 
         p {
-            grid-area: p;
             padding: $medida-2;
             @include p(center);
-            text-align: left;
         }
         .mainproy__sec__span{
             display: none;
@@ -47,14 +41,17 @@
         font-size: $medida-3 + $medida-05;
       }  
         .mainproy__sec {
+            display: grid;
             grid-template-areas:
             "img h2"
             "img p";
             h2{
+                grid-area: h2;
                 font-size: $medida-2 +$medida-05;
                 margin-top: $medida-1 + $medida-05;
             }
             p{
+                grid-area: p;
                 text-align: center;
                 margin-bottom: $medida-1;
             }
@@ -62,6 +59,7 @@
                 display: inline;
             }
             img {
+                grid-area: img;
                 @include sizes(30rem, 20rem);
             }
         }
